"Calculator commit" after edited calculation

--- a/app/src/main/res/layout-land/activity_calculator.xml
+++ b/app/src/main/res/layout-land/activity_calculator.xml
@@ -354,6 +354,7 @@
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/btnPNSign"
                             style="@style/SmallDigitButton"
+                            android:textColor="@color/yellow"
                             android:text="@string/pnSign" />
 
 
